--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
     <footer>
         <div class="some">
             <figure>
-                <a href="#"><img src="/img/linkedin-in-brands.svg" alt="linkein"></a>
-                <a href="#"><img src="/img/github-brands.svg" alt="github"></a>
+                <a href="#"><img class="someIcon" src="/img/linkedin-in-brands.svg" alt="linkein"></a>
+            </figure>
+            <figure>
+                <a href="#"><img class="someIcon" src="/img/github-brands.svg" alt="github"></a>
             </figure>
         </div>
         <div class="legal">
