--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="#"><img class="someIcon" src="img/linkedin-in-brands.svg" alt="linkein"></a>
             </figure>
             <figure>
-                <a href="#"><img class="someIcon" src="img/github-brands.svg" alt="github"></a>
+                <a href="https://github.com/WebVahvero"><img class="someIcon" src="img/github-brands.svg" alt="github"></a>
             </figure>
         </div>
         <div class="legal">
