--- a/index.html
+++ b/index.html
@@ -30,29 +30,31 @@
         </section>
         <section class="new-foods">
             <h3>Uusimmat Setit</h3>
-            <div class="food-card">
-                <figure>
-                    <img src="img/juustohampurilainen-2.jpg" alt="ruoka">
-                </figure>
-                <h5>Uusi setti</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                <button class="card-button">Tutustu!</button>
-            </div>
-            <div class="food-card">
-                <figure>
-                    <img src="img/juustohampurilainen-2.jpg" alt="ruoka">
-                </figure>
-                <h5>Uusi setti</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                <button class="card-button">Tutustu!</button>
-            </div>
-            <div class="food-card">
-                <figure>
-                    <img src="img/juustohampurilainen-2.jpg" alt="ruoka">
-                </figure>
-                <h5>Uusi setti</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                <button class="card-button">Tutustu!</button>
+            <div class="food-cards">
+                <div class="food-card">
+                    <figure>
+                        <img src="img/juustohampurilainen-2.jpg" alt="ruoka">
+                    </figure>
+                    <h5>Uusi setti</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
+                    <button class="card-button">Tutustu!</button>
+                </div>
+                <div class="food-card">
+                    <figure>
+                        <img src="img/juustohampurilainen-2.jpg" alt="ruoka">
+                    </figure>
+                    <h5>Uusi setti</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
+                    <button class="card-button">Tutustu!</button>
+                </div>
+                <div class="food-card">
+                    <figure>
+                        <img src="img/juustohampurilainen-2.jpg" alt="ruoka">
+                    </figure>
+                    <h5>Uusi setti</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
+                    <button class="card-button">Tutustu!</button>
+                </div>
             </div>
             <button class="section-end-button">Tutustu kaikkiin eväisiin</button>
         </section>
