Reworked front page and lot of new stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valtterin-Muiskismaiskis-Setit</title>
+    <title>Valtterin Muiskismaiskis Setit</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,7 +26,8 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Valtterin Muiskismaiskis Setit</h1>
+            <h1>Valtterin Kokkailu Blogi</h1>
+            <img class="ramen" src="./img/ramen_dining_white_24dp.svg" alt="">
         </section>
         <section class="new-foods">
             <h3>Uusimmat Setit</h3>
@@ -37,7 +38,7 @@
                     </figure>
                     <h5>Uusi setti</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                    <button class="card-button">Tutustu!</button>
+                    <a href="#"><button class="card-button">Tutustu!</button></a>
                 </div>
                 <div class="food-card">
                     <figure>
@@ -45,7 +46,7 @@
                     </figure>
                     <h5>Uusi setti</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                    <button class="card-button">Tutustu!</button>
+                    <a href="#"><button class="card-button">Tutustu!</button></a>
                 </div>
                 <div class="food-card">
                     <figure>
@@ -53,26 +54,34 @@
                     </figure>
                     <h5>Uusi setti</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                    <button class="card-button">Tutustu!</button>
+                    <a href="#"><button class="card-button">Tutustu!</button></a>
                 </div>
             </div>
             <button class="section-end-button">Tutustu kaikkiin eväisiin</button>
         </section>
         <section class="blog">
             <h3>Keittiö Psykoosit</h3>
-            <div class="latest-blog-card">
-                <h4>Kiinnostava Otsikko</h4>
-                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. At dignissimos temporibus necessitatibus iste cum vitae. Aut atque a magnam aspernatur minima beatae deserunt commodi blanditiis earum, consectetur voluptate necessitatibus amet. Sint vitae saepe molestiae inventore.</article>
+            <div class="blog-cards">
+                <div class="latest-blog-card">
+                    <h4>Kiinnostava Otsikko</h4>
+                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. At dignissimos temporibus necessitatibus iste cum vitae. Aut atque a magnam aspernatur minima beatae deserunt commodi blanditiis earum, consectetur voluptate necessitatibus amet. Sint vitae saepe molestiae inventore.</article>
+                </div>
+                <div class="latest-blog-card">
+                    <h4>Kiinnostava Otsikko</h4>
+                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. At dignissimos temporibus necessitatibus iste cum vitae. Aut atque a magnam aspernatur minima beatae deserunt commodi blanditiis earum, consectetur voluptate necessitatibus amet. Sint vitae saepe molestiae inventore.</article>
+                </div>
             </div>
             <button class="section-end-button">Tutustu kaikkiin artikkeleihin</button>
         </section>
         <section class="about">
             <h3>Pikaisesti Minusta</h3>
-            <h6>Kuka olen</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A illo, facere at ipsam laudantium eum corporis reprehenderit culpa, quasi non amet assumenda necessitatibus architecto dolores?</p>
-            <h6>Sivun tarkoitus</h6>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa repudiandae impedit laudantium, laboriosam cum inventore illo molestias quisquam!</p>
-            <button class="section-end-button">Tutustu minuun</button>
+            <div class="about-card">
+                <h6>Kuka olen</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A illo, facere at ipsam laudantium eum corporis reprehenderit culpa, quasi non amet assumenda necessitatibus architecto dolores?</p>
+                <h6>Sivun tarkoitus</h6>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa repudiandae impedit laudantium, laboriosam cum inventore illo molestias quisquam!</p>
+                <button class="section-end-button">Tutustu minuun</button>
+            </div>
         </section>
     </main>
     <footer>
@@ -86,7 +95,7 @@
         </div>
         <div class="legal">
             <h5>Sivun tehnyt <span><a href="#">Valtteri</a></span></h5>
-            <h6>Rekisteri</h6>
+            <h6><a href="#">Rekisteri</a></h6>
         </div>
     </footer>
 </body>
