Fixed stuff again

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             </ul>
         </nav>
     </header>
-    <main>
         <section class="hero">
-            <h1>Valtterin Kokkailu Blogi</h1>
-            <img class="ramen" src="./img/ramen_dining_white_24dp.svg" alt="">
+            <div class="hero-logo">
+                <h1>Valtterin Kokkailu Blogi</h1>
+                <img class="ramen" src="./img/ramen_dining_white_24dp.svg" alt="">
+            </div>
         </section>
         <section class="new-foods">
             <h3>Uusimmat Setit</h3>
@@ -83,7 +84,6 @@
                 <button class="section-end-button">Tutustu minuun</button>
             </div>
         </section>
-    </main>
     <footer>
         <div class="some">
             <figure>
