--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </footer>
     <div class="back-to-top">
         <div id="scrollToTop" class="back-to-top-inner">
-            <a href="#"><img src="/img/arrow-up.svg" alt="arrow-up"></a>
+            <a href="#"><img src="img/arrow-up.svg" alt="arrow-up"></a>
         </div>
     </div>
     <script src="script/scroll.js"></script>
