--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valtterin Muiskismaiskis Setit</title>
+    <title>Muiskismaiskis Blog</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <header>
-        <a href="#">
+        <a href="index.html">
             <div class="logo">
                 <h2 class="cursiveLogo">Valtterin</h2>
                 <h2>Muiskismaiskis</h2>
@@ -19,9 +19,8 @@
         </a>
         <nav>
             <ul>
-                <li><a class="nav-link" href="#">Eväät</a></li>
-                <li><a class="nav-link" href="#">Blogi</a></li>
-                <li><a class="nav-link" href="#aboutme">Minusta</a></li>
+                <li><a class="nav-link" href="/ruokablogi.html">Ruokablogi</a></li>
+                <li><a class="nav-link" href="index.html#aboutme">Minusta</a></li>
             </ul>
         </nav>
     </header>
@@ -30,36 +29,43 @@
                 <h1>Valtterin Kokkailu Blogi</h1>
                 <img class="ramen" src="./img/ramen_dining_white_24dp.svg" alt="">
             </div>
+            <div class="custom-wave">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                    <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                    <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+                </svg>
+            </div>
         </section>
         <section class="new-foods">
             <h3>Uusimmat Setit</h3>
             <div class="food-cards">
-                <div class="food-card">
-                    <figure>
-                        <img class="food-thumbnail" src="img/juustohampurilainen-2.jpg" alt="ruoka">
-                    </figure>
-                    <h5>Uusi setti</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                    <a href="#"><button class="card-button">Tutustu!</button></a>
+                <div class="first-food-card food-card">
+                    <h5 class="food-heading">Feta-pinaatti pasta</h5>
+                    <div class="food-card-inner">
+                        <h5>Feta-pinaatti pasta</h5>
+                        <p>Lempeä Feta-Pinaattipasta itsetehdyllä tuorepastalla</p>
+                        <a href="fetapinaattipasta.html"><button class="card-button">Tutustu!</button></a>
+                    </div>
                 </div>
-                <div class="food-card">
-                    <figure>
-                        <img class="food-thumbnail" src="img/juustohampurilainen-2.jpg" alt="ruoka">
-                    </figure>
-                    <h5>Uusi setti</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                    <a href="#"><button class="card-button">Tutustu!</button></a>
+                <div class="second-food-card food-card">
+                    <h5 class="food-heading">Kebab Rulla</h5>
+                    <div class="food-card-inner">
+                        <h5>Kebab Rulla</h5>
+                        <p>Herkullinen Kebab Rulla itsetehdyllä kebabilla ja curry majoneesilla</p>
+                        <a href="#"><button class="card-button">Tutustu!</button></a>
+                    </div>
                 </div>
-                <div class="food-card">
-                    <figure>
-                        <img class="food-thumbnail" src="img/juustohampurilainen-2.jpg" alt="ruoka">
-                    </figure>
-                    <h5>Uusi setti</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea, fuga.</p>
-                    <a href="#"><button class="card-button">Tutustu!</button></a>
+                <div class="third-food-card food-card">
+                    <h5 class="food-heading">Mummon Kurkut</h5>
+                    <div class="food-card-inner">
+                        <h5>Mummon Kurkut</h5>
+                        <p>Makoisat ja nopeat yksinkertaisella 1-2-3 pikkeli liemellä</p>
+                        <a href="#"><button class="card-button">Tutustu!</button></a>
+                    </div>
                 </div>
             </div>
-            <button class="section-end-button">Tutustu kaikkiin eväisiin</button>
+            <a href="/ruokablogi.html"><button class="section-end-button">Tutustu kaikkiin eväisiin</button></a>
         </section>
         <section class="blog">
             <h3>Keittiö Psykoosit</h3>
